--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -30,6 +30,7 @@
               name="{{ product.name }}"
               description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
               productId="{{ product.id }}"
+              slug="{{ product.slug }}"
           />
         {% endfor %}
       {% else %}
