--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -26,6 +26,7 @@
                 name="{{ product.name }}"
                 description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                 productId="{{ product.id }}"
+                slug="{{ product.slug }}"
             />
           {% endfor %}
         </div>
