feat(BakeryCategory): add slug attribute to product component for improved routing

--- a/templates/category/bakery_category.html.twig
+++ b/templates/category/bakery_category.html.twig
@@ -30,6 +30,7 @@
                 description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                 productId="{{ product.id }}"
                 bakeryId="{{ product.bakery.id }}"
+                slug="{{ product.slug }}"
             />
           {% endfor %}
         </div>
