--- a/templates/components/ProductCard.html.twig
+++ b/templates/components/ProductCard.html.twig
@@ -10,7 +10,7 @@
       <div class="flex flex-col ml-3 flex-grow">
         <span class="text-xs font-normal text-gray-800">{{ category }}</span>
         <p class="font-semibold text-sm font-playfair truncate">{{ name }}</p>
-        <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930] w-fit">{{ price }}€</span>
+        <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930] w-fit">{{ price|number_format(2, ',', ' ') }}€</span>
       </div>
     </a>
 
@@ -45,7 +45,7 @@
 
         <div class="w-full flex flex-row items-center justify-between mt-1">
           <p class="font-semibold text-lg font-playfair">{{ name }}</p>
-          <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price }}€</span>
+          <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price|number_format(2, ',', ' ') }}€</span>
         </div>
 
         <p class="text-gray-600 mt-2 text-xs flex-grow line-clamp-3">{{ description }}</p>
